--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
+:root {
+  --color-fontColor : #72A603;
+  --color-navbarColor : #E5F2B6;
+  --color-pointColor : #EAF207;
+
+  --size-ContainerWidth : 800px;
+  --sie-ContainerHeight : 600px;
+}
+
+
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width : 100vw;
+  height : 100vh;
+  display: flex;
+  justify-content: center;
+  min-width: var(--size-ContainerWidth);
+  min-height: var(--size-ContainerHeight);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  width : var(--size-ContainerWidth);
+  height : var(--size-ContainerHeight);
+  border : 1px solid black;
+}
+
+.banner {
+  width : 100%;
+  height : 100px;
+  color : var(--color-fontColor);
+  
+  font-size: 60px;
+  font-weight: bolder;
+  
+  text-align: center;
+  line-height: 100px;
+ 
+  border-bottom: 3px solid var(--color-pointColor);
+}
+
+
+
+section {
+  width : 100%;
+  height: 500px;
+  display: flex;
+}
+
+
+.photoContainer {
+  width : 100%;
+  height : 500px;
+}
+
+
+.navbar {
+  width : 40%;
+  height : 100%;
+  background-color: var(--color-navbarColor);
+}
+
+#detail {
+  width : 100%;
+  height : 100%;
+  background-color: blue;
 }
