--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --color-navbarColor : #E5F2B6;
   --color-pointColor : #EAF207;
   --color-fontBrownColor : #594827;
+  --color-bgColor : #FAFDE2;
   --size-ContainerWidth : 800px;
   --sie-ContainerHeight : 600px;
 }
@@ -21,6 +22,8 @@ body {
   justify-content: center;
   min-width: var(--size-ContainerWidth);
   min-height: var(--size-ContainerHeight);
+
+  box-sizing: border-box;
 }
 
 code {
@@ -31,7 +34,6 @@ code {
 .container {
   width : var(--size-ContainerWidth);
   height : var(--size-ContainerHeight);
-  border : 1px solid black;
 }
 
 .banner {
@@ -39,34 +41,55 @@ code {
   height : 100px;
   color : var(--color-fontColor);
   
-  font-size: 60px;
+  font-size: 50px;
   font-weight: bolder;
   
   text-align: center;
   line-height: 100px;
- 
-  border-bottom: 3px solid var(--color-pointColor);
+  border-bottom: 8px double var(--color-pointColor);
 }
 
 
 .navbar {
+  width : 40%;
+  height : 100%;
+  background-color: var(--color-navbarColor);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .listFont {
-  margin: 10px;
+  margin: 12px;
   font-size : 30px;
   font-weight: bolder;
   color : var(--color-fontBrownColor)
-  
 }
 
 .goto {
   display: flex;
   justify-content: center;
-  
+  align-items: center;
+}
+
+input {
+  border : none;
+  border-radius: 10px;
+  height : 30px;
+  text-align: center;
+}
+
+button {
+  margin : 3px;
+  border : none;
+  border-radius : 10px;
+  outline: none;
+  padding : 9px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--color-pointColor);
 }
 
 ul {
@@ -98,23 +121,33 @@ section {
   width : 100%;
   height: 500px;
   display: flex;
+ 
 }
 
+img {
+  max-width : 400px;
+  max-height : 400px;
+}
 
 .photoContainer {
   width : 100%;
   height : 500px;
+  display : flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-bgColor);
 }
 
+p {
+  color : var(--color-fontBrownColor);
+}
 
 .navbar {
-  width : 40%;
-  height : 100%;
-  background-color: var(--color-navbarColor);
+
 }
 
 #detail {
   width : 100%;
   height : 100%;
-  background-color: blue;
 }
